se arregla parte de solución al reto

--- a/index.html
+++ b/index.html
@@ -509,52 +509,88 @@
             </section>
             
             <section class="max-w-5xl mx-auto space-y-16 sm:space-y-24 py-16 px-4 sm:px-6">
-                 <div id="desafio" class="grid md:grid-cols-2 gap-8 md:gap-12 items-center min-h-[60vh]">
-                    <div class="scroll-fade-in text-center md:text-left">
-                        <h2 class="text-4xl sm:text-5xl font-serif text-[#6D4C41] mb-6">El Desafío: Industria 4.0</h2>
-                        <p class="text-gray-600 text-lg sm:text-xl"><strong class="font-semibold text-[#6D4C41]">Estrategia Dual:</strong> Transformamos nuestra línea tradicional en dos nuevas direcciones: una de <span class="font-semibold">consumo masivo</span>, para competir en eficiencia, y una <span class="font-semibold">Línea Premium Artesanal</span>, para capitalizar nuestra herencia y exclusividad.</p>
+                <!-- Contexto Inicial -->
+                <div class="space-y-8">
+                    <div class="text-center">
+                        <h2 class="text-3xl sm:text-4xl font-serif text-[#6D4C41] mb-6">El Contexto</h2>
+                        <p class="text-gray-700 text-lg sm:text-xl max-w-4xl mx-auto">
+                            Desde 1950, ChocoTradición ha sido un pilar en la industria chocolatera de Manizales. Bajo la dirección de su tercera generación, mantenemos vivo el arte del chocolate artesanal con cacao colombiano, distribuyéndolo en tiendas propias y supermercados regionales del Eje Cafetero.
+                        </p>
                     </div>
-                    <div class="bg-white p-8 rounded-lg shadow-md hover:shadow-2xl transition-shadow duration-300 scroll-fade-in flex items-center justify-center h-48 sm:h-64" style="transition-delay: 100ms;">
-                        <svg class="w-20 h-20 sm:w-24 sm:h-24 text-[#A0522D]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 006 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 016 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 016-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0018 18a8.967 8.967 0 00-6 2.292m0-14.25v14.25" /></svg>
-                    </div>
-                </div>
-
-                 <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center min-h-[60vh]">
-                     <div class="bg-white p-8 rounded-lg shadow-md hover:shadow-2xl transition-shadow duration-300 scroll-fade-in flex items-center justify-center h-48 sm:h-64 md:order-2" style="transition-delay: 100ms;">
-                        <svg class="w-20 h-20 sm:w-24 sm:h-24 text-[#A0522D]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M8.25 3v1.5M4.5 8.25H3m18 0h-1.5M4.5 12H3m18 0h-1.5m-15 3.75H3m18 0h-1.5M8.25 19.5V18m0-15V5.25c0-1.104.896-2 2-2h3.375c1.104 0 2 .896 2 2V18m0-15.75l-3.75-1.5L8.25 3zM21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-                    </div>
-                    <div class="scroll-fade-in text-center md:text-left md:order-1">
-                        <h2 class="text-4xl sm:text-5xl font-serif text-[#6D4C41] mb-6">Producción Inteligente con IA</h2>
-                        <p class="text-gray-600 text-lg sm:text-xl mb-4"><strong class="font-semibold text-[#6D4C41]">Visión Computacional:</strong> Usamos <span class="font-semibold">Visual Inspection AI de Google Cloud</span> para identificar defectos en tiempo real, asegurando la máxima calidad.</p>
-                        <p class="text-gray-600 text-lg sm:text-xl"><strong class="font-semibold text-[#6D4C41]">Mantenimiento Predictivo:</strong> Con <span class="font-semibold">sensores IoT</span>, anticipamos fallos en la maquinaria, garantizando una producción constante y sin interrupciones.</p>
-                    </div>
-                </div>
-
-                 <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center min-h-[60vh]">
-                    <div class="scroll-fade-in text-center md:text-left">
-                        <h2 class="text-4xl sm:text-5xl font-serif text-[#6D4C41] mb-6">Modelo de Producción Híbrida</h2>
-                        <p class="text-gray-600 text-lg sm:text-xl">Integramos lo mejor de dos mundos: la línea artesanal se beneficia de la eficiencia de la producción industrial para potenciar su productividad, pero conservando los procesos manuales que le otorgan su carácter único y exclusivo. Esto nos permite optimizar costos sin sacrificar el alma de nuestro chocolate.</p>
-                    </div>
-                    <div class="bg-white p-8 rounded-lg shadow-md hover:shadow-2xl transition-shadow duration-300 scroll-fade-in flex items-center justify-center h-48 sm:h-64" style="transition-delay: 100ms;">
-                        <svg class="w-20 h-20 sm:w-24 sm:h-24 text-[#A0522D]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15.042 21.672L13.684 16.6m0 0l-2.51 2.225.569-9.47 5.227 7.917-3.286-.672zM12 2.25a8.967 8.967 0 00-6.313 2.659c-1.226 1.226-1.912 2.878-1.912 4.642 0 3.516 4.761 6.862 6.313 8.418 1.552-1.556 6.313-4.902 6.313-8.418 0-1.764-.686-3.416-1.912-4.642A8.967 8.967 0 0012 2.25z" /></svg>
-                    </div>
-                </div>
-
-                <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center min-h-[60vh]">
-                     <div class="bg-white p-8 rounded-lg shadow-md hover:shadow-2xl transition-shadow duration-300 scroll-fade-in flex items-center justify-center h-48 sm:h-64 md:order-2" style="transition-delay: 100ms;">
-                         <svg class="w-20 h-20 sm:w-24 sm:h-24 text-[#A0522D]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                           <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 3.104v5.714a2.25 2.25 0 01-.659 1.591L5 14.5M9.75 3.104c.251.023.501.05.75.082a.75.75 0 01.75.75v5.714a2.25 2.25 0 00.659 1.591L14.25 14.5M9.75 3.104a2.25 2.25 0 00-1.5-.659m1.5.659a2.25 2.25 0 011.5-.659m-1.5 2.25H12m1.5 0a2.25 2.25 0 011.5-.659m-1.5.659a2.25 2.25 0 001.5-.659m-1.5 2.25H15M12 15.75a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0v-2.25a.75.75 0 01.75-.75z" />
-                         </svg>
-                    </div>
-                    <div class="scroll-fade-in text-center md:text-left md:order-1">
-                        <h2 class="text-4xl sm:text-5xl font-serif text-[#6D4C41] mb-6">Experiencia del Cliente 2.0</h2>
-                        <p class="text-gray-600 text-lg sm:text-xl">Como puente entre nuestras líneas, la experiencia del cliente es clave. A través del <span class="font-semibold">Laboratorio de Experiencias</span>, ofrecemos personalización digital con IA y renovamos nuestras tiendas físicas como espacios de <span class="font-semibold">Experience Retailing</span>, donde el cliente no solo compra, sino que vive la marca.</p>
+                    <div class="grid md:grid-cols-2 gap-8">
+                        <div class="bg-white p-8 rounded-lg shadow-lg">
+                            <h3 class="text-xl font-serif text-[#6D4C41] mb-4">Nuestros Desafíos</h3>
+                            <ul class="space-y-3 text-gray-700">
+                                <li>• Inversión tecnológica limitada</li>
+                                <li>• Presencia digital reducida</li>
+                                <li>• Procesos productivos mayormente manuales</li>
+                                <li>• Competencia de multinacionales</li>
+                                <li>• Volatilidad en precios del cacao</li>
+                            </ul>
+                        </div>
+                        <div class="bg-white p-8 rounded-lg shadow-lg">
+                            <h3 class="text-xl font-serif text-[#6D4C41] mb-4">Nuestras Oportunidades</h3>
+                            <ul class="space-y-3 text-gray-700">
+                                <li>• Creciente demanda de productos premium</li>
+                                <li>• Mercados internacionales por explorar</li>
+                                <li>• Interés en experiencias personalizadas</li>
+                                <li>• Potencial en comercio electrónico</li>
+                                <li>• Valoración de lo artesanal y sostenible</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
+                <!-- Nuestra Solución -->
+                <div class="space-y-12">
+                    <div class="text-center">
+                        <h2 class="text-3xl sm:text-4xl font-serif text-[#6D4C41] mb-6">Nuestra Solución</h2>
+                        <p class="text-gray-700 text-lg sm:text-xl max-w-4xl mx-auto">
+                            En la era de la Industria 4.0, transformamos nuestro modelo de negocio enfocándonos en la producción inteligente y la experiencia del cliente, mientras preservamos nuestra esencia artesanal.
+                        </p>
+                    </div>
 
+                    <div class="grid md:grid-cols-3 gap-8">
+                        <div class="bg-white p-6 rounded-lg shadow-lg space-y-4">
+                            <h3 class="text-xl font-serif text-[#6D4C41]">Línea Tradicional Renovada</h3>
+                            <p class="text-gray-600">División estratégica en dos líneas: consumo masivo para competir en eficiencia y Premium artesanal para capitalizar nuestra herencia.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg space-y-4">
+                            <h3 class="text-xl font-serif text-[#6D4C41]">Producción Inteligente</h3>
+                            <p class="text-gray-600">Implementación de Visual Inspection AI y sensores IoT para control de calidad y mantenimiento predictivo.</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow-lg space-y-4">
+                            <h3 class="text-xl font-serif text-[#6D4C41]">Experiencia Digital</h3>
+                            <p class="text-gray-600">Integración de IA para personalización de productos y renovación de espacios físicos como centros de experiencia.</p>
+                        </div>
+                    </div>
+
+                    <div class="bg-[#EFEBE9] p-8 rounded-lg">
+                        <h3 class="text-2xl font-serif text-[#6D4C41] mb-4">Impacto y Sostenibilidad</h3>
+                        <div class="grid md:grid-cols-2 gap-8">
+                            <div>
+                                <h4 class="font-semibold text-[#6D4C41] mb-2">Preservación de Nuestra Esencia</h4>
+                                <ul class="space-y-2 text-gray-700">
+                                    <li>• Mantenimiento de procesos artesanales clave</li>
+                                    <li>• Fortalecimiento de relaciones con agricultores</li>
+                                    <li>• Conservación de recetas tradicionales</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h4 class="font-semibold text-[#6D4C41] mb-2">Innovación y Futuro</h4>
+                                <ul class="space-y-2 text-gray-700">
+                                    <li>• Optimización de procesos con IA</li>
+                                    <li>• Expansión de mercado digital</li>
+                                    <li>• Experiencias personalizadas modernas</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Botones de Descarga -->
                 <div class="grid md:grid-cols-2 gap-8 scroll-fade-in pt-16">
-                    <a href="#" class="bg-white p-6 sm:p-8 rounded-lg shadow-lg hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 flex items-center space-x-4 sm:space-x-6">
+                    <a href="src/pdf/guion.pdf" download class="bg-white p-6 sm:p-8 rounded-lg shadow-lg hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 flex items-center space-x-4 sm:space-x-6">
                         <svg class="w-10 h-10 sm:w-12 sm:h-12 text-[#A0522D]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75l3 3m0 0l3-3m-3 3v-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                         </svg>
@@ -563,7 +599,7 @@
                             <p class="text-gray-600 text-sm sm:text-base">Lee el guión completo de la propuesta.</p>
                         </div>
                     </a>
-                     <a href="#" class="bg-white p-6 sm:p-8 rounded-lg shadow-lg hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 flex items-center space-x-4 sm:space-x-6">
+                     <a href="src/pdf/presentacion.pdf" download class="bg-white p-6 sm:p-8 rounded-lg shadow-lg hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 flex items-center space-x-4 sm:space-x-6">
                         <svg class="w-10 h-10 sm:w-12 sm:h-12 text-[#A0522D]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" />
                         </svg>
